# CodeJourneyPython

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PROJECT_IMPROVEMENTS_SUMMARY.md  README.md  pyproject.toml  requirements-agents.txt  requirements-dev.txt  requirements-ml.txt  requirements-web.txt  setup.py
.idx/: dev.nix
libraries/Numpy/: README.md
libraries/Pandas/: README.md
projects/: __init__.py
projects/ guess_the_number/: game.py
projects/ai_agent_chatbot/: .env.example  README.md  __init__.py  agent.py  config.py  main.py  requirements.txt  tools.py
projects/ai_agent_chatbot/tests/: test_agent.py
projects/data_pipeline_etl/: README.md  __init__.py  extractors.py  loaders.py  main.py  pipeline.py  requirements.txt  transformers.py
projects/guess_the_number/: README.md  __init__.py  game.py  guess_the_number.ipynb
projects/guess_the_number/tests/: __init__.py  test_game.py
projects/ml_recommendation/: README.md  api.py  requirements.txt
projects/ml_recommendation/features/: engineering.py
projects/ml_recommendation/models/: evaluate.py  train.py
projects/ml_recommendation/tests/: test_models.py
projects/utils/: __init__.py  config.py  errors.py  logging_config.py
projects/web_api_service/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
projects/web_api_service/backend/: app.py
projects/web_api_service/frontend/: index.html
projects/web_api_service/frontend/css/: styles.css
projects/web_api_service/frontend/js/: app.js
resources/: useful_links.md
resources/Virtual tools/: README.md
resources/cheatsheets/: data_structures_cheatsheet.md  oop_cheatsheet.md  python_basics_cheatsheet.md  python_libraries_cheatsheet.md
